corpus/argument-number-float-exponent.txt
==================
Argument Number Float
==================

test 2.694400241737399e+25

---

(file
	(statements
		(statement
			(line (NL))
		)
		(statement
			(instruction (identifier (IDENTIFIER)) (arguments
				(argument
					(argumentNumber (NUMBER))
				)
			) (NL))
		)
	)
)
