corpus/argument-number-infinity.txt
==================
Argument Number Infinity
==================

test Infinity, -Infinity

---

(file
	(statements
		(statement
			(line (NL))
		)
		(statement
			(instruction (identifier (IDENTIFIER)) (arguments
				(argument
					(argumentNumber (NUMBER))
				)
				(COMMA)
				(argument
					(argumentNumber (NUMBER))
				)
			) (NL))
		)
	)
)
