corpus/instruction-comment.txt
==================
Instruction Comment
==================

test ; comment

---

(file
	(statements
		(statement
			(line (NL))
		)
		(statement
			(instruction (identifier (IDENTIFIER)) (comment (COMMENT)) (NL))
		)
	)
)
